--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,9 @@ term_size = "0.3.2"
 thiserror = "1.0.38"
 toml = "0.7.1"
 toml_edit = "0.19.0"
+tracing = { version = "0.1.37", optional = true }
+tracing-log = { version = "0.1.3", optional = true }
+tracing-subscriber = { version = "0.3.16", optional = true }
 url = "2.3.1"
 versions = "4.1.0"
 
@@ -83,6 +86,7 @@ test-log = "0.2"
 brew = []
 deb = []
 rpm = []
+tracing = ["dep:tracing", "dep:tracing-subscriber"]
 
 [profile.release]
 debug = 0
